--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -1,9 +1,10 @@
+<!-- templates/base.html -->
 {% load static %}
 
 <!DOCTYPE html> 
 <html lang="ru">          
   <head>
-      <meta charset="utf-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href={% static "img/fav/fav.ico"%} type="image">
     <link rel="apple-touch-icon" sizes="180x180" href={% static "img/fav/apple-touch-icon.png" %}>
