--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -6,7 +6,7 @@
 {% block content %} 
 <div class="container py-5">
 <h1> {{ title }} </h1>
-<article>
+
 
 {% for post in posts %}
   <ul>
@@ -25,6 +25,6 @@
     
     {% if not forloop.last %}<hr>{% endif %}
 {% endfor %} 
-</article>
-<hr>
+
+</div>
 {% endblock %}
