--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,11 +1,12 @@
 {% extends 'base.html'%}
 
 
-{% block title %}{{ title }}{% endblock %}
+{% block title %} 
+  <title>Последние обновления на сайте</title>
+{% endblock %}
  
 {% block content %} 
-<div class="container py-5">
-<h1> {{ title }} </h1>
+<h1>Последние обновления на сайте</h1>
 
 
 {% for post in posts %}
