--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,13 +1,12 @@
 {% extends 'base.html'%}
 
-{% block title %}{{ title }}{% endblock %}
-
+{% block title %}
+  <title> Записи сообщества {{ group }} </title>
+{% endblock %}
 {% block content %}
-<div class="container py-5">
-<h1> {{ title }} </h1>
-<article>
+  <h1>Записи сообщества {{group.title}}</h1>
 
-{% for post in posts %}
+  {% for post in posts %}
   <ul>
     <li>
       Автор: {{ post.author.get_full_name }}
@@ -16,10 +15,8 @@
       Дата публикации: {{ post.pub_date|date:"d E Y" }}
     </li>
   </ul>
-  <p>{{ post.text }}</p>
+  <br>{{ post.text }}</br>
+  {% if not forloop.last %}<hr>{% endif %}
+  {% endfor %} 
 
-{% if not forloop.last %}<hr>{% endif %}
-{% endfor %} 
-</article>
-<hr>
 {% endblock %}
