--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -18,14 +18,11 @@
       Дата публикации: {{ post.pub_date|date:"d E Y" }}
     </li>
     </ul>
-    <p>{{ post.text }}</p>
-
+    <p>{{ post.text|linebreaksbr }}</p>
     {% if post.group %}
       <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>             
     {% endif %}
-    
     {% if not forloop.last %}<hr>{% endif %}
 {% endfor %} 
 
-</div>
 {% endblock %}
