--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -2,7 +2,7 @@
 
 
 {% block title %} 
-  <title>Последние обновления на сайте</title>
+  Последние обновления на сайте.
 {% endblock %}
  
 {% block content %} 
