--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -1,4 +1,3 @@
-<!-- templates/base.html -->
 {% load static %}
 
 <!DOCTYPE html> 
@@ -13,8 +12,10 @@
     <meta name="msapplication-TileColor" content="#000">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <title>
       {% block title %}
       {% endblock %} 
+    </title>  
   </head>
   <body>       
     <header>
