--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,12 +1,13 @@
 {% extends 'base.html'%}
 
 {% block title %}
-  <title> Записи сообщества {{ group }} </title>
+  Записи сообщества {{ group }}
 {% endblock %}
 {% block content %}
   <h1>Записи сообщества {{group.title}}</h1>
-
+  <p>{{ group.description|linebreaksbr }}</p>
   {% for post in posts %}
+  <article>
   <ul>
     <li>
       Автор: {{ post.author.get_full_name }}
@@ -16,6 +17,7 @@
     </li>
   </ul>
   <p>{{ post.text|linebreaksbr }}</p>
+  </article>
   {% if not forloop.last %}<hr>{% endif %}
   {% endfor %} 
 
