--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,15 +1,14 @@
 {% extends 'base.html'%}
 
-
 {% block title %} 
   Последние обновления на сайте.
 {% endblock %}
  
 {% block content %} 
-<h1>Последние обновления на сайте</h1>
+  <h1>Последние обновления на сайте.</h1>
 
-
-{% for post in posts %}
+  {% for post in posts %}
+  <article>
   <ul>
     <li>
       Автор: {{ post.author.get_full_name }}
@@ -17,12 +16,13 @@
     <li>
       Дата публикации: {{ post.pub_date|date:"d E Y" }}
     </li>
-    </ul>
-    <p>{{ post.text|linebreaksbr }}</p>
-    {% if post.group %}
-      <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>             
-    {% endif %}
-    {% if not forloop.last %}<hr>{% endif %}
-{% endfor %} 
+  </ul>
+  <p>{{ post.text|linebreaksbr }}</p>
+  {% if post.group %}
+    <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>             
+  {% endif %}
+  </article>
+  {% if not forloop.last %}<hr>{% endif %}
+  {% endfor %} 
 
 {% endblock %}
