--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,11 +1,13 @@
 {% extends 'base.html'%}
 
 {% block title %}
-  Записи сообщества {{ group }}
+  Записи сообщества {{ group.title }}
 {% endblock %}
+
 {% block content %}
   <h1>Записи сообщества {{group.title}}</h1>
   <p>{{ group.description|linebreaksbr }}</p>
+
   {% for post in posts %}
   <article>
   <ul>
